--- a/Responsive Web Design/Tribute Page/index.html
+++ b/Responsive Web Design/Tribute Page/index.html
@@ -22,27 +22,25 @@
         <div id="tribute-info">
             <div id="tribute-title">Time line of Dr. José Rizal's life:</div>
             <div id="tribute-body">
-                1861 - Born in Calamba, Laguna
+                1861 - Born in Calamba, Laguna<br><br>
                 
-                1882 - Studied medicine at Universidad Central de Madrid
+                1882 - Studied medicine at Universidad Central de Madrid<br><br>
 
-                1884 - Became a Master Mason
+                1884 - Became a Master Mason<br><br>
 
-                1887 - Wrote a poem "A las flores del Heidelberg" and his novel Noli Me Tángere for his native land. In the same year, he also finished eye specialization, returned to the Philippines and later operated on his mother's eye.
+                1887 - Wrote a poem "A las flores del Heidelberg" and his novel Noli Me Tángere for his native land. In the same year, he also finished eye specialization, returned to the Philippines and later operated on his mother's eye.<br><br>
 
-                1886 - Published Dimache des Rameaux, which was a socio-political essay that discussed the significance of Palm Sunday.
+                1886 - Published Dimache des Rameaux, which was a socio-political essay that discussed the significance of Palm Sunday.<br><br>
 
-                1888 - 
+                1890 - Left paris for Brussels for the publication of his annotations of Antonio de Morga's Sucesos de las Islas Filipinas.<br><br>
 
-                1890 - Left paris for Brussels for the publication of his annotations of Antonio de Morga's Sucesos de las Islas Filipinas.
+                1891 - Finished El filibusterismo<br><br>
 
-                1891 - Finished El filibusterismo
+                1892 - Formed a civic movement called La Liga Filipina. During this year, He also built a school, hospital, and water supply system in Dapitan, Zamboanga.<br><br>
 
-                1892 - Formed a civic movement called La Liga Filipina. During this year, He also built a school, hospital, and water supply system in Dapitan, Zamboanga.
+                1895 - Met Josephine Bracken, which became his wife later on.<br><br>
 
-                1895 - Met Josephine Bracken, which became his wife later on.
-
-                1896 - Executed by the Spanish military at the age of 35, having his last words "it is finished"
+                1896 - Executed by the Spanish military at the age of 35, having his last words "it is finished"<br><br>
             </div>
             <div id="poem">
                 <span id="poem-title">Mi último adiós</span><br><br>
