--- a/Responsive Web Design/Tribute Page/index.html
+++ b/Responsive Web Design/Tribute Page/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribute Page</title>
 
     <link rel="stylesheet" href="./style.css">
+
+    
 </head>
 <body>
     
@@ -14,7 +21,7 @@
         <div id="title">Dr. José Rizal</div>
         <div id="oneliner">The national hero of the Philippines</div>
         <figure id="img-div">
-            <img id="image" src="/images/joserizal.jpg">
+            <img id="image" src="/images/joserizal.jpg" alt="Statue of Jose Rizal">
             <figcaption id="img-div">
                 Dr. José Rizal wrote the novels Noli Me Tángere and El filibusterismo, which became the national epic that helped advocate political reforms during the time of the Spanish colonial period.
             </figcaption>
@@ -43,7 +50,7 @@
                 1896 - Executed by the Spanish military at the age of 35, having his last words "it is finished"<br><br>
             </div>
             <div id="poem">
-                <span id="poem-title">Mi último adiós</span><br><br>
+                <div id="poem-title">Mi último adiós</div><br>
 
                 Farewell, my adored Land, region of the sun caressed,<br>
                 Pearl of the Orient Sea, our Eden lost,<br>
@@ -130,7 +137,7 @@
                 Farewell to all I love; to die is to rest.<br><br>                
             </div>
         </div>
-        <a id="tribute-link" target="_blank"></a>
+        <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Jos%C3%A9_Rizal">Read More...</a>
     </main>
 
 </body>
