Change some elements

--- a/Responsive Web Design/Tribute Page/index.html
+++ b/Responsive Web Design/Tribute Page/index.html
@@ -21,13 +21,14 @@
         <div id="title">Dr. José Rizal</div>
         <div id="oneliner">The national hero of the Philippines</div>
         <figure id="img-div">
-            <img id="image" src="/images/joserizal.jpg" alt="Statue of Jose Rizal">
+            <img id="image" src="/Responsive Web Design/Tribute Page/images/joserizal.jpg" alt="Statue of Jose Rizal">
             <figcaption id="img-div">
                 Dr. José Rizal wrote the novels Noli Me Tángere and El filibusterismo, which became the national epic that helped advocate political reforms during the time of the Spanish colonial period.
             </figcaption>
         </figure>
+        <hr>
         <div id="tribute-info">
-            <div id="tribute-title">Time line of Dr. José Rizal's life:</div>
+            <div id="tribute-title">Time line of Dr. José Rizal's life</div>
             <div id="tribute-body">
                 1861 - Born in Calamba, Laguna<br><br>
                 
@@ -47,8 +48,9 @@
 
                 1895 - Met Josephine Bracken, which became his wife later on.<br><br>
 
-                1896 - Executed by the Spanish military at the age of 35, having his last words "it is finished"<br><br>
+                1896 - Executed by the Spanish military at the age of 35, having his last words "it is finished"<br>
             </div>
+            <hr>
             <div id="poem">
                 <div id="poem-title">Mi último adiós</div><br>
 
@@ -137,7 +139,9 @@
                 Farewell to all I love; to die is to rest.<br><br>                
             </div>
         </div>
-        <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Jos%C3%A9_Rizal">Read More...</a>
+        <div id="read-more">
+            <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Jos%C3%A9_Rizal">Read More...</a>
+        </div>
     </main>
 
 </body>
