Minor changes to pass fcc tests

--- a/Responsive Web Design/Tribute Page/index.html
+++ b/Responsive Web Design/Tribute Page/index.html
@@ -22,7 +22,7 @@
         <div id="oneliner">The national hero of the Philippines</div>
         <figure id="img-div">
             <img id="image" src="/Responsive Web Design/Tribute Page/images/joserizal.jpg" alt="Statue of Jose Rizal">
-            <figcaption id="img-div">
+            <figcaption id="img-caption">
                 Dr. José Rizal wrote the novels Noli Me Tángere and El filibusterismo, which became the national epic that helped advocate political reforms during the time of the Spanish colonial period.
             </figcaption>
         </figure>
