--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -31,12 +31,15 @@
             <option value="other">Other</option>
         </select>
 
-        <input id="definitely" type="radio" name="recommend" value="definitely">
-        <label for="definitely">Definitely</label>
-        <input id="maybe" type="radio" name="recommend" value="maybe">
-        <label for="maybe">Maybe</label>
-        <input id="not-sure" type="radio" name="recommend" value="not-sure">
-        <label for="not-sure">Not sure</label>
+        <fieldset>
+            <legend>Would you recommend freeCodeCamp to a friend?</legend>
+            <input id="definitely" type="radio" name="recommend" value="definitely">
+            <label for="definitely">Definitely</label>
+            <input id="maybe" type="radio" name="recommend" value="maybe">
+            <label for="maybe">Maybe</label>
+            <input id="not-sure" type="radio" name="recommend" value="not-sure">
+            <label for="not-sure">Not sure</label>
+        </fieldset>
 
         <fieldset>
             <legend>What would you like to see improved? (Check all that apply)</legend>
