Fix range of age and email input type

--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -23,10 +23,10 @@
         <input id="name" type="text" placeholder="Enter your name">
 
         <label id="email-label" for="email">Email</label>
-        <input id="email" type="text" placeholder="Enter your Email">
+        <input id="email" type="email" placeholder="Enter your Email">
         
         <label id="number-label" for="number">Age</label>
-        <input id="number" type="number" min="" max="" placeholder="Age">
+        <input id="number" type="number" min="10" max="99" placeholder="Age">
 
         <label id="dropdown-label" for="dropdown">
             Which option best describes your current role?
@@ -110,10 +110,3 @@
     </form>
 </body>
 </html>
-
-<!--
-    TODO
-    * HTML5 validation error
-        (8) non-number
-        (9) min max
--->
