Add video and image links

--- a/Responsive Web Design/Product Landing Page/index.html
+++ b/Responsive Web Design/Product Landing Page/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Landing Page</title>
+    <title>Houzo</title>
 
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header id="header">
-        <img id="header-img">
+        <img id="header-img" src="http://drive.google.com/uc?export=view&id=17yOJR2x7IKvYLG2v4YEX2f3NkxVa_dx2">
         <nav id="nav-bar">
             <a class="nav-link"></a>
             <a class="nav-link"></a>
@@ -18,13 +18,13 @@
         </nav>
     </header>
 
-    <video id="video">
-        <source src="">
+    <video id="video" controls loop muted>
+        <source src="https://www.pexels.com/video/3818213/download/?search_query=&tracking_id=uipr0co3lig" type="video/mp4">
     </video>
 
     <form id="form" action="https://www.freecodecamp.com/email-submit">
-        <input id="email" type="email" placeholder="Enter your email here">
-        <input id="submit" type="submit">
+        <input id="email" type="email" placeholder="Enter your email here" name="email">
+        <input id="submit" type="submit" value="Enter">
     </form>
 </body>
 </html>
