Make final adjustments

--- a/Responsive Web Design/Product Landing Page/index.html
+++ b/Responsive Web Design/Product Landing Page/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">  
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,10 +26,12 @@
         <video id="video" controls loop muted>
             <source src="https://www.pexels.com/video/3818213/download/?search_query=&tracking_id=uipr0co3lig" type="video/mp4">
         </video>
+
         <form id="form" action="https://www.freecodecamp.com/email-submit">
             <input id="email" type="email" placeholder="Enter your email here" name="email">
-            <input id="submit" type="submit" value="Enter">
+            <input id="submit" type="submit" value="">
         </form>
+
         <div id="highlight">
             <div class="item">
                 <img class="icon">
@@ -68,30 +70,27 @@
         <div id="pricing">
             <div class="plan">
                 <div class="label">Simple</div>
-                <div class="cost">$324.99</div>
                 <div class="feature">Lorem ipsum</div>
                 <div class="feature">Lorem ipsum</div>
                 <div class="feature">Lorem ipsum</div>
                 <div class="feature">Lorem ipsum</div>
-                <button>Cool</button>
+                <button>$300</button>
             </div>
             <div class="plan">
                 <div class="label">Gold</div>
-                <div class="cost">$500</div>
                 <div class="feature">Lorem ipsum</div>
                 <div class="feature">Lorem ipsum</div>
                 <div class="feature">Lorem ipsum</div>
                 <div class="feature">Lorem ipsum</div>
-                <button>Cool</button>
+                <button>$500</button>
             </div>
             <div class="plan">
                 <div class="label">Deluxe</div>
-                <div class="cost">$700</div>
                 <div class="feature">Lorem ipsum</div>
                 <div class="feature">Lorem ipsum</div>
                 <div class="feature">Lorem ipsum</div>
                 <div class="feature">Lorem ipsum</div>
-                <button>Cool</button>
+                <button>$700</button>
             </div>
         </div>
     </div>
@@ -112,7 +111,5 @@
 <!--
 TODO:
 (2) company logo
-(5) working links
-(6) add a vid link
 (10) test validation
 -->
